syntax = "proto3";

service TestRpcService {
    rpc GetUser(TestGetUserRequestMessage) returns (TestGetUserResponseMessage);
    rpc SetUser(TestSetUserRequestMessage) returns (TestSetUserResponseMessage);
    rpc SendSome(TestEmptyReqMessage) returns (stream TestStreamMessage); // 流式服务
}


message TestGetUserRequestMessage {
    int64 id = 1;
}

message TestGetUserResponseMessage {
    int64 id = 1;
    string name =2;
}

message TestSetUserRequestMessage {
    int64 id = 1;
    string name = 2;
}

message TestSetUserResponseMessage {
    bool result =1;
}

message TestEmptyReqMessage {}


message TestStreamMessage {
    int64 bit = 1;
}










